--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <div class="card-body">
                   <h4 class="card-title text-uppercase" style="color: gold; border-bottom: 1px solid gold;">Get In Touch </h4>
                   <form action="https://api.web3forms.com/submit" method="POST">
-                    <!-- apin key for web3form messaging  -->
+                    <!-- api key for web3form messaging  -->
                     <input type="hidden" name="access_key" value="d530a1e5-790b-4d7d-a3af-36c2ca240b3f">
                     <label for="name">Name: </label>
                     <input type="text" pattern="[A-Za-z\s]{1,}" title="only letters and space are allowed" required>
