--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <!-- poppins font style -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
+    <!-- favicon linking -->
+    <link rel="icon" type="image/x-icon" href="favicon.webp">
 </head>
 <body>
     <!-- define logo and menu section -->
