updates are done

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container-fluid general" id="home">
       <div class="row general_info">
       <div class="col-md-6 image">
-        <img src="photo.jpg" alt="user_image" class="animated-image" style="width: 300px; height: 300px; border-radius: 50%; max-width: 100%;">
+        <img src="photo.jpg" alt="user_image" class="animated-image">
       </div>
 
         <div class="col-md-6 info">
@@ -377,7 +377,7 @@
                   </p>
 
 
-                  <p class="soical-icons">
+                  <p class="social-icons">
                     <a href="https://www.linkedin.com/in/dheeraj-singh-jeena-6141a1284" target="_blank" class="text-decoration-none"> <i class="fa-brands fa-linkedin" style="color: #ffffff; border: 1px solid gold;"></i> </a>
 
                     <a href="https://github.com/dheerajsinghjeena" target="_blank" class="text-decoration-none"> <i class="fa-brands fa-github" style="color: #ffffff; border: 1px solid gold;"></i> </a>
