--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       I've recently completed a 6-month full-stack developer program, honing my skills in MERN (MongoDB, Express.js, React, Node.js) stack, as well as mastering Git and GitHub for version control. Ready to apply this comprehensive knowledge in real-world projects!
                     </p>
 
-                    <a href="amit resume.docx" download="resume.pdf">
+                    <a href="../Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
                       <button class="btn btn-warning" role="button">
                         Download CV
                       </button>   
@@ -156,7 +156,7 @@
                       <span style="font-style: italic;">Indira Gandhi National Open University (IGNOU)</span> in the year 2024. This academic achievement has equipped me with a solid foundation in computer science and a diverse skill set ready for development.
                     </p>
 
-                    <a href="amit resume.docx" download="resume.pdf">
+                    <a href="../Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
                       <button class="btn btn-warning" role="button">
                         Download CV
                       </button>   
@@ -174,7 +174,7 @@
                       I   completed my education at Saraswati Academy, achieving my Matriculation in 2019 and successfully completing Intermediate studies in 2021. These formative years have provided me with a strong academic grounding, fostering both personal and intellectual growth.
                     </p>
 
-                    <a href="amit resume.docx" download="resume.pdf">
+                    <a href="../Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
                       <button class="btn btn-warning" role="button">
                         Download CV
                       </button>   
@@ -219,7 +219,6 @@
                     <li>Express JS</li>
                     <li>MongoDB</li>
                     <li>MySql</li>
-                    <li>Java</li>
                   </ul> 
                 </div>
             </div>
@@ -234,7 +233,6 @@
                     <li>GitHub</li>
                     <li>Api Integration</li>
                     <li>PostMan</li>
-                    <li>Json</li>
                     <li>Communication</li>
                   </ul> 
                 </div>
@@ -251,9 +249,9 @@
         <h5 class="text-center text-white text-uppercase"><span style="border-bottom: 1px solid gold;">Projects</span></h5>
         <div class="row text-decoration-none ">
           <!-- first project -->
-          <div class="col-lg-4 col-sm-6 mt-3 project-animate">
+          <div class="col-md-4 mt-3 project-animate">
             <div class="card text-center ">
-              <img src="car_project.avif" alt="project" class="card-img-top"> 
+              <img src="car_project.avif" alt="project" class="card-img-top" height="240px"> 
                 <div class="card-body">
                   <h4 class="card-title text-uppercase" style="color: gold; border-bottom: 1px solid gold;">Car Rental</h4>
                   <p>
@@ -261,13 +259,13 @@
                   </p>
 
                    <a href="https://github.com/dheerajsinghjeena/BlueSky-Hire" target="_blank" class="text-decoration-none">
-                    <button class="btn btn-warning" role="button">
+                    <button class="btn btn-warning mt-1" role="button">
                       View Project
                     </button>  
                    </a>
 
                    <a href="https://dheerajsinghjeena.github.io/BlueSky-Hire/ " target="_blank" class="text-decoration-none">
-                    <button class="btn btn-warning" role="button">
+                    <button class="btn btn-warning mt-1" role="button">
                       Live Demo
                     </button>  
                    </a>
@@ -276,7 +274,7 @@
           </div>
 
           <!-- second project -->
-          <div class="col-lg-4 col-sm-6 mt-3 project-animate">
+          <div class="col-md-4 mt-3 project-animate">
             <div class="card text-center ">
               <img src="hotel_project.jpeg" alt="project" class="card-img-top" height="240px"> 
                 <div class="card-body">
@@ -284,14 +282,14 @@
                   <p>
                     Hotel Project: Build a website based on html and css.
                   </p>
-                   <a href="https://github.com/dheerajsinghjeena/hotel" target="_blank" class="text-decoration-none">
-                    <button class="btn btn-warning" role="button">
+                   <a href="https://github.com/dheerajsinghjeena/hotel" target="_blank" class="text-decoration-none ">
+                    <button class="btn btn-warning mt-1" role="button">
                       View Project
                     </button>  
                    </a>
 
                    <a href="https://dheerajsinghjeena.github.io/hotel/" target="_blank" class="text-decoration-none">
-                    <button class="btn btn-warning" role="button">
+                    <button class="btn btn-warning mt-1" role="button">
                       Live Demo
                     </button>  
                    </a>
@@ -300,23 +298,17 @@
           </div>
 
           <!-- third project -->
-          <div class="col-lg-4 col-sm-6 mt-3 project-animate">
+          <div class="col-md-4 mt-3 project-animate">
             <div class="card text-center ">
-              <img src="car_project.avif" alt="project" class="card-img-top"> 
+              <img src="book store.jpeg" alt="project" class="card-img-top" height="240px"> 
                 <div class="card-body">
-                  <h4 class="card-title text-uppercase" style="color: gold; border-bottom: 1px solid gold;">Car Rental</h4>
+                  <h4 class="card-title text-uppercase" style="color: gold; border-bottom: 1px solid gold;">Online Book Store</h4>
                   <p>
-                    Car Rental Project: This project is build using html, css and bootstrap framework. 
+                    Online book store is a dynamic website in which website data can be updated.
                   </p>
-                   <a href="https://github.com/dheerajsinghjeena/BlueSky-Hire" target="_blank" class="text-decoration-none">
-                    <button class="btn btn-warning" role="button">
+                   <a href="https://github.com/dheerajsinghjeena/Online-Book-Store" target="_blank" class="text-decoration-none">
+                    <button class="btn btn-warning mt-1" role="button">
                       View Project
-                    </button>  
-                   </a>
-
-                   <a href="https://dheerajsinghjeena.github.io/BlueSky-Hire/ " target="_blank" class="text-decoration-none">
-                    <button class="btn btn-warning" role="button">
-                      Live Demo
                     </button>  
                    </a>
                 </div>
