--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                       I've recently completed a 6-month full-stack developer program, honing my skills in MERN (MongoDB, Express.js, React, Node.js) stack, as well as mastering Git and GitHub for version control. Ready to apply this comprehensive knowledge in real-world projects!
                     </p>
 
-                    <a href="../Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
+                    <a href="Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
                       <button class="btn btn-warning" role="button">
                         Download CV
                       </button>   
@@ -156,7 +156,7 @@
                       <span style="font-style: italic;">Indira Gandhi National Open University (IGNOU)</span> in the year 2024. This academic achievement has equipped me with a solid foundation in computer science and a diverse skill set ready for development.
                     </p>
 
-                    <a href="../Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
+                    <a href="Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
                       <button class="btn btn-warning" role="button">
                         Download CV
                       </button>   
@@ -174,7 +174,7 @@
                       I   completed my education at Saraswati Academy, achieving my Matriculation in 2019 and successfully completing Intermediate studies in 2021. These formative years have provided me with a strong academic grounding, fostering both personal and intellectual growth.
                     </p>
 
-                    <a href="../Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
+                    <a href="Dheeraj Singh Jeena Resume.pdf" download="dheeraj Resume">
                       <button class="btn btn-warning" role="button">
                         Download CV
                       </button>   
